--- a/Client/Pages/LlistaVariables.razor
+++ b/Client/Pages/LlistaVariables.razor
@@ -9,19 +9,19 @@
 @inject HttpClient client;
 @if (Visible)
 {
-    <h3>VARIABLES</h3>
     @if (variables == null)
     {
-        <p><em>Cagando variables...</em></p>
+    <TextEdit IsPlaintext="true" @bind-Text="@_missatge" />
     }
     else
     {
-        <Table TableItem="Variable" Items="variables" PageSize="25" ColumnReorder="true" TableRowClass="@(x => x.RowClass)" OnSelectedItem="@OnSelectedVariable">
-            <Column TableItem="Variable" Title="Id" Field="@(x => x.id)" Sortable="true" Filterable="true" Width="10%" />
-            <Column TableItem="Variable" Title="Codi" Field="@(x => x.codi)" Sortable="true" Filterable="true" Width="40%" />
-            <Column TableItem="Variable" Title="Id Projecte" Field="@(x => x.idProjecte)" Sortable="true" Filterable="true" Width="10%" />
+        <BlazorTable.Table TableItem="Variable" Items="variables" PageSize="25" ColumnReorder="true" TableRowClass="@(x => x.RowClass)" OnSelectedItem="@OnSelectedVariable">
+            <BlazorTable.Column TableItem="Variable" Title="Id" Field="@(x => x.id)" Sortable="true" Filterable="true" Width="10%" />
+            <BlazorTable.Column TableItem="Variable" Title="Codi" Field="@(x => x.codi)" Sortable="true" Filterable="true" Width="40%" />
+            <BlazorTable.Column TableItem="Variable" Title="Id Projecte" Field="@(x => x.idProjecte)" Sortable="true" Filterable="true" Width="10%" />
             <Pager ShowPageNumber="true" ShowTotalCount="true" />
-        </Table>
+        </BlazorTable.Table>
+
     }
 }
 
@@ -33,15 +33,25 @@
     [Parameter]
     public EventCallback<Variable> OnSelectedVariable { get; set; }
 
-    [Parameter] public bool Visible { get; set; }
+    [Parameter]
+    public bool Visible { get; set; } = true;
+
+    string _missatge { get; set; } = "Cagando...";
 
     protected override async Task OnInitializedAsync()
     {
         var missatge = await client.GetAsync(api._debugUri + "/Consulta_Variables");
 
-        var resposta = await missatge.Content.ReadAsStringAsync();
+        if (missatge.IsSuccessStatusCode)
+        {
+            var resposta = await missatge.Content.ReadAsStringAsync();
 
-        variables = JsonConvert.DeserializeObject<Variable[]>(resposta);
+            variables = JsonConvert.DeserializeObject<Variable[]>(resposta);
+        }
+        else
+        {
+            _missatge = missatge.StatusCode.ToString();
+        }
     }
 }
 
