--- a/Client/_Imports.razor
+++ b/Client/_Imports.razor
@@ -4,4 +4,4 @@
 @using Microsoft.AspNetCore.Components.Web
 @using Microsoft.JSInterop
 @using TestScriptsWeb.Client
-@using TestScriptsWeb.Client.Shared
+@using Blazorise
